cmake_minimum_required(VERSION 3.7) 
    set(NTS_CC_FLAGS -ansi -Wall -Os -static)
    project(NTS C)
    add_definitions(-D_POSIX_SOURCE)
    aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR}/src NTS_SOURCE_FILES)
    include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
    set(INCLUDE_DIRECTORIES_BEFORE ON)
    add_library(NTSlib ${NTS_SOURCE_FILES})
    add_executable(NTS ${CMAKE_CURRENT_SOURCE_DIR}/main.c)
    target_link_libraries(NTS NTSlib)
    target_compile_options(NTS BEFORE PUBLIC ${NTS_CC_FLAGS})
    target_compile_options(NTSlib BEFORE PUBLIC ${NTS_CC_FLAGS})
